--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -8,23 +8,25 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/*header style starts here*/
+
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +34,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -46,10 +48,7 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
-
+/*hero style starts here*/
 .hero {
     height: 800px;
     width: 100%;
@@ -58,6 +57,15 @@ p {
     background-size: cover;
     background-position: center;
 }
+
+
+/*
+
+
+p {
+    font-size: 16px;
+}
+
 
 .float-left {
     float: left;
@@ -198,3 +206,6 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+
+
+*/
