consolidate & organize the CSS selectors & properties under Main Section

--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -59,28 +59,51 @@ a {
 }
 
 
-/*
+/*Main style starts here*/
+.main-section {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
 
+.main-content {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
 
-p {
+.main-content img {
+    max-height: 200px;
+    width: 35%;
+}
+
+.secondary-content-right {
+    width: 65%;
+    float: right;
+    padding-left: 25px;
+}
+
+.secondary-content-left {
+    width: 65%;
+    float: left;
+    padding-right: 25px;
+}
+
+.secondary-content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.secondary-content p {
     font-size: 16px;
 }
 
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
+/*
 
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
 }
 
 .benefits {
@@ -142,59 +165,6 @@ p {
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
 
 .footer {
     padding: 30px;
