introduce <footer> element under footer section and applied it in css

--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -132,18 +132,14 @@ a {
     font-size: 16px;
 }
 
-/*
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
-
-
-*/
